@@ -37,6 +37,7 @@ import com.openlattice.data.requests.NeighborEntityIds;
 import com.openlattice.datastore.apps.services.AppService;
 import com.openlattice.datastore.services.EdmService;
 import com.openlattice.edm.EntitySet;
+import com.openlattice.edm.type.PropertyType;
 import com.openlattice.organization.Organization;
 import com.openlattice.organizations.HazelcastOrganizationService;
 import com.openlattice.organizations.roles.SecurePrincipalsManager;
@@ -53,6 +54,7 @@ import java.time.OffsetDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static com.openlattice.authorization.EdmAuthorizationHelper.READ_PERMISSION;
 import static com.openlattice.postgres.DataTables.ID_FQN;
 
 @RestController
@@ -141,8 +143,53 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
     public DataSearchResult searchEntitySetData( @RequestBody SearchConstraints searchConstraints ) {
+        // check read on entity sets
+        final var authorizedEntitySetIds = Arrays.stream( searchConstraints.getEntitySetIds() )
+                .filter( esId -> authorizations.checkIfHasPermissions(
+                        new AclKey( esId ),
+                        Principals.getCurrentPrincipals(),
+                        READ_PERMISSION ) )
+                .collect( Collectors.toSet() );
 
-        DataSearchResult results = searchService.executeSearch( searchConstraints, Principals.getCurrentPrincipals() );
+        DataSearchResult results = new DataSearchResult( 0, Lists.newArrayList() );
+
+        if ( !authorizedEntitySetIds.isEmpty() ) {
+
+            final Map<UUID, EntitySet> entitySetsById = edm.getEntitySetsAsMap( authorizedEntitySetIds );
+
+            final var groupedEntitySets = entitySetsById.values().stream()
+                    .collect( Collectors.groupingBy( EntitySet::isLinking ) );
+
+            final Map<UUID, Map<UUID, PropertyType>> authorizedPropertyTypesByEntitySet = authorizationsHelper
+                    .getAuthorizedPropertiesOnEntitySets(
+                            groupedEntitySets.getOrDefault( false, Lists.newArrayList() ).stream()
+                                    .map( EntitySet::getId ).collect( Collectors.toSet() ),
+                            READ_PERMISSION,
+                            Principals.getCurrentPrincipals() );
+
+            groupedEntitySets.getOrDefault( true, Lists.newArrayList() ).forEach( linkingEntitySet -> {
+                        final var linkingEntitySetId = linkingEntitySet.getId();
+                        // check read permission on every normal entity set
+                        if ( !linkingEntitySet.getLinkedEntitySets().isEmpty()
+                                && linkingEntitySet.getLinkedEntitySets()
+                                .stream()
+                                .allMatch( esId -> authorizations.checkIfHasPermissions(
+                                        new AclKey( esId ),
+                                        Principals.getCurrentPrincipals(),
+                                        READ_PERMISSION ) ) ) {
+                            // authorized properties should be the same within 1 linking entity set for each normal
+                            // entity set
+                            authorizedPropertyTypesByEntitySet.put( linkingEntitySetId,
+                                    authorizationsHelper.getAuthorizedPropertyTypesOfLinkingEntitySet(
+                                            linkingEntitySet,
+                                            READ_PERMISSION ) );
+                        }
+                    }
+            );
+
+            results = searchService
+                    .executeSearch( searchConstraints, authorizedPropertyTypesByEntitySet );
+        }
 
         List<AuditableEvent> searchEvents = Lists.newArrayList();
         for ( int i = 0; i < searchConstraints.getEntitySetIds().length; i++ ) {
@@ -159,7 +206,6 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
         }
 
         recordEvents( searchEvents );
-
         return results;
     }
 
@@ -192,27 +238,33 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
         if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ),
                 currentPrincipals,
                 EnumSet.of( Permission.READ ) ) ) {
+
             EntitySet es = edm.getEntitySet( entitySetId );
             final Set<UUID> entitySets = ( es.isLinking() ) ? es.getLinkedEntitySets() : Set.of( entitySetId );
             final Set<UUID> authorizedEntitySets = entitySets.stream().filter( esId ->
                     authorizations.checkIfHasPermissions(
                             new AclKey( esId ),
-                            currentPrincipals,
+                            Principals.getCurrentPrincipals(),
                             EnumSet.of( Permission.READ ) ) )
                     .collect( Collectors.toSet() );
 
-            if ( authorizedEntitySets.size() == 0 ) {
-                logger.warn( "Read authorization failed for all the entity sets." );
-            } else {
+            if ( authorizedEntitySets.size() != entitySets.size() ) {
+                logger.warn( "Read authorization failed some of the normal entity sets of linking entity set or it " +
+                        "is empty." );
+            }  else {
+                var authorizedPropertyTypes = ( es.isLinking() )
+                        ? authorizationsHelper.getAuthorizedPropertyTypesOfLinkingEntitySet( es, READ_PERMISSION )
+                        : authorizationsHelper.getAuthorizedPropertyTypes( es.getId(), READ_PERMISSION );
 
                 dataSearchResult = searchService.executeSearch( SearchConstraints
                                 .simpleSearchConstraints(
-                                        new UUID[] { entitySetId },
+                                        new UUID[]{ entitySetId },
                                         searchTerm.getStart(),
                                         searchTerm.getMaxHits(),
                                         searchTerm.getSearchTerm(),
                                         searchTerm.getFuzzy() ),
-                        currentPrincipals );
+                        Map.of( es.getId(), authorizedPropertyTypes )
+                );
             }
         }
 
@@ -240,13 +292,12 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             @RequestBody AdvancedSearch search ) {
         DataSearchResult dataSearchResult = new DataSearchResult( 0, Lists.newArrayList() );
 
-        Set<Principal> currentPrincipals = Principals.getCurrentPrincipals();
-
         if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ),
                 Principals.getCurrentPrincipals(),
                 EnumSet.of( Permission.READ ) ) ) {
 
             EntitySet es = edm.getEntitySet( entitySetId );
+
             final Set<UUID> entitySets = ( es.isLinking() ) ? es.getLinkedEntitySets() : Set.of( entitySetId );
             final Set<UUID> authorizedEntitySets = entitySets.stream().filter( esId ->
                     authorizations.checkIfHasPermissions(
@@ -255,16 +306,21 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
                             EnumSet.of( Permission.READ ) ) )
                     .collect( Collectors.toSet() );
 
-            if ( authorizedEntitySets.size() == 0 ) {
-                logger.warn( "Read authorization failed for all the entity sets." );
-            } else {
+            if ( authorizedEntitySets.size() != entitySets.size() ) {
+                logger.warn( "Read authorization failed some of the normal entity sets of linking entity set or it " +
+                        "is empty." );
+            }  else {
+                var authorizedPropertyTypes = ( es.isLinking() )
+                        ? authorizationsHelper.getAuthorizedPropertyTypesOfLinkingEntitySet( es, READ_PERMISSION )
+                        : authorizationsHelper.getAuthorizedPropertyTypes( es.getId(), READ_PERMISSION );
+
                 dataSearchResult = searchService.executeSearch(
                         SearchConstraints.advancedSearchConstraints(
-                                new UUID[] { entitySetId },
+                                new UUID[]{ entitySetId },
                                 search.getStart(),
                                 search.getMaxHits(),
                                 search.getSearches() ),
-                        currentPrincipals );
+                        Map.of( es.getId(), authorizedPropertyTypes ) );
             }
         }
 
@@ -375,11 +431,24 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
 
         if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ), principals,
                 EnumSet.of( Permission.READ ) ) ) {
-            neighbors = searchService
-                    .executeEntityNeighborSearch( ImmutableSet.of( entitySetId ),
-                            new EntityNeighborsFilter( ImmutableSet.of( entityKeyId ) ), principals )
-                    .getOrDefault( entityKeyId, ImmutableList.of() );
+            EntitySet es = edm.getEntitySet( entitySetId );
 
+            final var entitySets = ( es.isLinking() ) ? es.getLinkedEntitySets() : Set.of( entitySetId );
+            final var authorizedEntitySets = entitySets.stream()
+                    .filter( linkedEntitySetId ->
+                            authorizations.checkIfHasPermissions( new AclKey( linkedEntitySetId ),
+                                    Principals.getCurrentPrincipals(),
+                                    EnumSet.of( Permission.READ ) ) )
+                    .collect( Collectors.toSet() );
+            if ( authorizedEntitySets.size() != entitySets.size() ) {
+                logger.warn( "Read authorization failed some of the normal entity sets of linking entity set or it " +
+                        "is empty." );
+            } else {
+                neighbors = searchService
+                        .executeEntityNeighborSearch( ImmutableSet.of( entitySetId ),
+                                new EntityNeighborsFilter( ImmutableSet.of( entityKeyId ) ), principals )
+                        .getOrDefault( entityKeyId, ImmutableList.of() );
+            }
         }
 
         UUID userId = getCurrentUserId();
@@ -448,8 +517,23 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
         Map<UUID, List<NeighborEntityDetails>> result = Maps.newHashMap();
         if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ), principals,
                 EnumSet.of( Permission.READ ) ) ) {
-            result = searchService
-                    .executeEntityNeighborSearch( ImmutableSet.of( entitySetId ), filter, principals );
+
+            EntitySet es = edm.getEntitySet( entitySetId );
+
+            final var entitySets = ( es.isLinking() ) ? es.getLinkedEntitySets() : Set.of( entitySetId );
+            final var authorizedEntitySets = entitySets.stream()
+                    .filter( linkedEntitySetId ->
+                            authorizations.checkIfHasPermissions( new AclKey( linkedEntitySetId ),
+                                    Principals.getCurrentPrincipals(),
+                                    EnumSet.of( Permission.READ ) ) )
+                    .collect( Collectors.toSet() );
+            if ( authorizedEntitySets.size() != entitySets.size() ) {
+                logger.warn( "Read authorization failed some of the normal entity sets of linking entity set or it " +
+                        "is empty." );
+            } else {
+                result = searchService
+                        .executeEntityNeighborSearch( ImmutableSet.of( entitySetId ), filter, principals );
+            }
         }
 
 
@@ -457,16 +541,16 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
 
         ListMultimap<UUID, UUID> neighborsByEntitySet = ArrayListMultimap.create();
 
-        result.values().forEach( neighborList -> {
-            neighborList.forEach( neighborEntityDetails -> {
-                neighborsByEntitySet.put( neighborEntityDetails.getAssociationEntitySet().getId(),
-                        getEntityKeyId( neighborEntityDetails.getAssociationDetails() ) );
-                if ( neighborEntityDetails.getNeighborEntitySet().isPresent() ) {
-                    neighborsByEntitySet.put( neighborEntityDetails.getNeighborEntitySet().get().getId(),
-                            getEntityKeyId( neighborEntityDetails.getNeighborDetails().get() ) );
-                }
-            } );
-        } );
+        result.values().forEach( neighborList ->
+                neighborList.forEach( neighborEntityDetails -> {
+                    neighborsByEntitySet.put( neighborEntityDetails.getAssociationEntitySet().getId(),
+                            getEntityKeyId( neighborEntityDetails.getAssociationDetails() ) );
+                    if ( neighborEntityDetails.getNeighborEntitySet().isPresent() ) {
+                        neighborsByEntitySet.put( neighborEntityDetails.getNeighborEntitySet().get().getId(),
+                                getEntityKeyId( neighborEntityDetails.getNeighborDetails().get() ) );
+                    }
+                } )
+        );
 
         List<AuditableEvent> events = new ArrayList<>( neighborsByEntitySet.keySet().size() + 1 );
         UUID userId = getCurrentUserId();
@@ -549,19 +633,19 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
         Map<UUID, Map<UUID, SetMultimap<UUID, NeighborEntityIds>>> result = Maps.newHashMap();
         if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ), principals,
                 EnumSet.of( Permission.READ ) ) ) {
+
             EntitySet es = edm.getEntitySet( entitySetId );
+
             if ( es.isLinking() ) {
-                Preconditions.checkArgument(
-                        !es.getLinkedEntitySets().isEmpty(),
-                        "Linking entity sets does not consist of any entity sets." );
-                Set<UUID> authorizedEntitySets = es.getLinkedEntitySets().stream()
+                final Set<UUID> authorizedEntitySets = es.getLinkedEntitySets().stream()
                         .filter( linkedEntitySetId ->
                                 authorizations.checkIfHasPermissions( new AclKey( linkedEntitySetId ),
                                         Principals.getCurrentPrincipals(),
                                         EnumSet.of( Permission.READ ) ) )
                         .collect( Collectors.toSet() );
-                if ( authorizedEntitySets.size() == 0 ) {
-                    logger.warn( "Read authorization failed for all the linked entity sets." );
+                if ( authorizedEntitySets.size() != es.getLinkedEntitySets().size() ) {
+                    logger.warn( "Read authorization failed some of the normal entity sets of linking entity set or it " +
+                            "is empty." );
                 } else {
                     result = searchService
                             .executeLinkingEntityNeighborIdsSearch( authorizedEntitySets, filter, principals );
@@ -578,16 +662,16 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
 
         SetMultimap<UUID, UUID> neighborsByEntitySet = HashMultimap.create();
 
-        result.values().forEach( associationMap -> {
-            associationMap.entrySet().forEach( associationEntry -> {
-                associationEntry.getValue().entries().forEach( neighborEntry -> {
-                    neighborsByEntitySet
-                            .put( associationEntry.getKey(), neighborEntry.getValue().getAssociationEntityKeyId() );
-                    neighborsByEntitySet
-                            .put( neighborEntry.getKey(), neighborEntry.getValue().getNeighborEntityKeyId() );
-                } );
-            } );
-        } );
+        result.values().forEach( associationMap ->
+                associationMap.entrySet().forEach( associationEntry -> {
+                    associationEntry.getValue().entries().forEach( neighborEntry -> {
+                        neighborsByEntitySet
+                                .put( associationEntry.getKey(), neighborEntry.getValue().getAssociationEntityKeyId() );
+                        neighborsByEntitySet
+                                .put( neighborEntry.getKey(), neighborEntry.getValue().getNeighborEntityKeyId() );
+                    } );
+                } )
+        );
 
         List<AuditableEvent> events = new ArrayList<>( neighborsByEntitySet.keySet().size() + 1 );
         UUID userId = getCurrentUserId();
